--- a/index.html
+++ b/index.html
@@ -12,31 +12,32 @@
     <div id="header" class="header">
         <h1>Players of Mumbai Indians</h1>
     </div>
+    <marquee behavior="scroll" direction="left">*CLICK ON PLAYER FOR STATS | THIS WEBSITE IS CREATED BY PRERIT AGRAWAL</marquee>
     <div id="players" class="players">
-        <img src="images\rohit sharma.jpg" alt="Rohit Sharma">
-        <img src="images\anmolpreet singh.jpg" alt="Anmolpreet Singh">
-        <img src="images\allen.jpg" alt="Fabien Allen">
-        <img src="images\arjun juyal.jpg" alt="Arjun Juyal">
-        <img src="images\arjun tendulkar.jpg" alt="Arjun Tendulkar">
-        <img src="images\ashwin.jpg" alt="Murugan Ashwin">
-        <img src="images\baby ab.jpg" alt="Dewald Brevis">
-        <img src="images\basil thampi.jpg" alt="Basil Thampi">
-        <img src="images\hritik roseen.jpg" alt="Hritik Shokeen">
-        <img src="images\ishan kisan.jpg" alt="Ishan Kisan">
-        <img src="images\jasprit bumrah.jpg" alt="Jasprit Bumrah">
-        <img src="images\jaydev unadkat.jpg" alt="Jaydev Unadkat">
-        <img src="images\khan.jpg" alt="khan">
-        <img src="images\markande.jpg" alt="Mayank Markande">
-        <img src="images\meredith.jpg" alt="Meredith">
-        <img src="images\mills.jpg" alt="Tymal Mills">
-        <img src="images\pollard.jpg" alt="kireon Pollard">
-        <img src="images\rahul subuddhi.jpg" alt="Rahul Subuddhi">
-        <img src="images\ramandeep singh.jpg" alt="Ramandeep Singh">
-        <img src="images\sanjay yadav.jpg" alt="Sanjay Yadav">
-        <img src="images\sky.jpg" alt="Surya Kumar Yadav">
-        <img src="images\smas.jpg" alt="Daniels Sams">
-        <img src="images\tilak verma.jpg" alt="Tilak Verma">
-        <img src="images\tim david.jpg" alt="Tim David">
+        <a href="https://www.espncricinfo.com/player/rohit-sharma-34102" target="_blank"><img src="images\rohit sharma.jpg" alt="Rohit Sharma"></a>
+        <a href="https://www.espncricinfo.com/player/anmolpreet-singh-851261" target="_blank"><img src="images\anmolpreet singh.jpg" alt="Anmolpreet Singh"></a>
+        <a href="https://www.espncricinfo.com/player/fabian-allen-670013" target="_blank"><img src="images\allen.jpg" alt="Fabien Allen"></a>
+        <a href="https://www.espncricinfo.com/player/aryan-juyal-1130300" target="_blank"><img src="images\arjun juyal.jpg" alt="Arjun Juyal"></a>
+        <a href="https://www.espncricinfo.com/player/arjun-tendulkar-1148776" target="_blank"><img src="images\arjun tendulkar.jpg" alt="Arjun Tendulkar"></a>
+        <a href="https://www.espncricinfo.com/player/murugan-ashwin-528067" target="_blank"><img src="images\ashwin.jpg" alt="Murugan Ashwin"></a>
+        <a href="https://www.espncricinfo.com/player/dewald-brevis-1070665" target="_blank"><img src="images\baby ab.jpg" alt="Dewald Brevis"></a>
+        <a href="https://www.espncricinfo.com/player/basil-thampi-732291" target="_blank"><img src="images\basil thampi.jpg" alt="Basil Thampi"></a>
+        <a href="https://www.espncricinfo.com/player/hrithik-shokeen-1175423" target="_blank"><img src="images\hritik roseen.jpg" alt="Hritik Shokeen"></a>
+        <a href="https://www.espncricinfo.com/player/ishan-kishan-720471" target="_blank"><img src="images\ishan kisan.jpg" alt="Ishan Kisan"></a>
+        <a href="https://www.espncricinfo.com/player/jasprit-bumrah-625383" target="_blank"><img src="images\jasprit bumrah.jpg" alt="Jasprit Bumrah"></a>
+        <a href="https://www.espncricinfo.com/player/jaydev-unadkat-390484" target="_blank"><img src="images\jaydev unadkat.jpg" alt="Jaydev Unadkat"></a>
+        <a href="https://www.espncricinfo.com/player/arshad-khan-1244751" target="_blank"><img src="images\khan.jpg" alt="khan"></a>
+        <a href="https://www.espncricinfo.com/player/mayank-markande-1081442" target="_blank"><img src="images\markande.jpg" alt="Mayank Markande"></a>
+        <a href="https://www.espncricinfo.com/player/riley-meredith-961713" target="_blank"><img src="images\meredith.jpg" alt="Meredith"></a>
+        <a href="https://www.espncricinfo.com/player/tymal-mills-459257" target="_blank"><img src="images\mills.jpg" alt="Tymal Mills"></a>
+        <a href="https://www.espncricinfo.com/player/kieron-pollard-230559" target="_blank"><img src="images\pollard.jpg" alt="kireon Pollard"></a>
+        <a href="https://www.espncricinfo.com/player/rahul-buddhi-1212693" target="_blank"><img src="images\rahul subuddhi.jpg" alt="Rahul Subuddhi"></a>
+        <a href="https://www.espncricinfo.com/player/ramandeep-singh-1079470" target="_blank"><img src="images\ramandeep singh.jpg" alt="Ramandeep Singh"></a>
+        <a href="https://www.espncricinfo.com/player/sanjay-yadav-1048841" target="_blank"><img src="images\sanjay yadav.jpg" alt="Sanjay Yadav"></a>
+        <a href="https://www.espncricinfo.com/player/suryakumar-yadav-446507" target="_blank"><img src="images\sky.jpg" alt="Surya Kumar Yadav"></a>
+        <a href="https://www.espncricinfo.com/player/daniel-sams-826901" target="_blank"><img src="images\smas.jpg" alt="Daniels Sams"></a>
+        <a href="https://www.espncricinfo.com/player/tilak-varma-1170265" target="_blank"><img src="images\tilak verma.jpg" alt="Tilak Verma"></a>
+        <a href="https://www.espncricinfo.com/player/tim-david-892749" target="_blank"><img src="images\tim david.jpg" alt="Tim David"></a>
 
         
     </div>
